--- a/a_01/index.html
+++ b/a_01/index.html
@@ -1,15 +1,22 @@
 <html>
 <head>
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
   
   <link href="https://fonts.googleapis.com/css?family=Homemade+Apple|Josefin+Sans" rel="stylesheet">
-<center>
-<a href="https://www.youtube.com/watch?v=fYa0P4Ww4yU">
-  <img src="images/sculpture.png" style="width:654px;height:972px;">
-</center>
-</a>
+
 
   </head>
+
+ <body> 
+
+<a href="https://www.youtube.com/watch?v=fYa0P4Ww4yU">
+
+
+
+<img class="displayed" src="images/sculpture.png" style="width:654px;height:972px;">
+
+  
+</a>
 <h1>Historical  Sculptures</h1> 
 
 <p>
@@ -19,12 +26,13 @@
 
 
   <h2>The Victorious Youth </h2>
-  <p style="text-align:center ;">
+  <p>
     Known by its Italian name Atleta di Fano, Victorious Youth is a Greek bronze sculpture that was found in the sea of Fano on the Adriatic coast of Italy. It was built between 300 and 100 BC and is currently among the collections of the J. Paul Getty Museum in California. Historians believe that the statue was once a part of the group of sculptures of victorious athletes in Olympia and Delphi.
-   <img src="images/youth copy.png"  alt="image" >
-
-
   </p>
+
+   <img class="displayed" src="images/youthcopy.png" >
+
+
 
 
   
@@ -37,13 +45,13 @@
 
 
   </p>
-       <img src="images/David.png" alt="image" >
+       <img class="displayed" src="images/david.png" alt="image" >
   
   <h4> Alexander the Great </h4>
   <p>
-    The statue of Alexander the Great was discovered inside the Pella Palace in Greece. Coated with marble patina and made of bonded marble, the statue was built in 280 BC to honor Alexander the Great, the popular Greek hero who sprawled over several parts of the world and led battles against Persian Armies, particularly in Granicus, Issus and Gaugamela. The statue of Alexander the Great is now among the Greek art collections of the Archaeological Museum of Pella in Greece.
-  <img src="images/Alexander the great.png"  alt="image" > 
-  </p>
+    The statue of Alexander the Great was discovered inside the Pella Palace in Greece. Coated with marble patina and made of bonded marble, the statue was built in 280 BC to honor Alexander the Great, the popular Greek hero who sprawled over several parts of the world and led battles against Persian Armies, particularly in Granicus, Issus and Gaugamela. The statue of Alexander the Great is now among the Greek art collections of the Archaeological Museum of Pella in Greece.   </p>
+
+  <img class="displayed" src="images/alexanderthegreat.png" > 
 
        
 
@@ -53,13 +61,14 @@
   
   </p>
 
-        <img src="images/Winged2.png" alt="image"> 
+        <img class="displayed" src="images/winged2.png" alt="image"> 
 
   <h6> Peplos Kore </h6>
   <p>
     Recovered from the Athenian Acropolis, Peplos Kore is a stylized image of the Greek goddess Athena. Historians believe that the statue was created to serve as a votive offering during the ancient times. Made during the Archaic period of Greek art history, Peplos Kore is characterized by the stiff and formal pose of Athena, her majestic tresses and archaic smile. It initially appeared in polychrome but only traces of its original colors can be observed today.
-<img src="images/peplos Kore.png" border="0" alt="image"> 
-  </p>
+      </p>
+
+<img class="displayed" src="images/peploskore.png"  alt="image"> 
        
 
 <h6> Which material is commonly used in sculpture? </h6>
@@ -87,11 +96,13 @@ Pottery is one of the oldest materials for sculpture, as well as clay being the 
 <a href="https://www.artsy.net/search?q=historical%20sculptures"><img src="images/artsy.png"
 </center>
 <center>
-  <a href="http://www.florence-museum.com/it/biglietti-galleria-accademia.php?gclid=Cj0KEQiAifvEBRCVx5up6Ojgr5oBEiQALHw1Tu2Um_DnFaFKhOjSnLFVuTSeDaiAqNg0N3v7QpenpV4aAv_p8P8HAQ"><img src="images/italy museum.png" border="0" alt="Link" style="width:80px;height:74px;" </a> </center>
-<center>
-<p  id="myHeader">Historical Sculptures</p>
+  <a href="http://www.florence-museum.com/it/biglietti-galleria-accademia.php?gclid=Cj0KEQiAifvEBRCVx5up6Ojgr5oBEiQALHw1Tu2Um_DnFaFKhOjSnLFVuTSeDaiAqNg0N3v7QpenpV4aAv_p8P8HAQ"><img src="images/italymuseum.png" border="0" alt="Link" style="width:80px;height:74px;" </a> </center>
+
+<p  id="myHeader"> Historical Sculptures </p>
 <center><button onclick="displayResult()">Change</button>
 </center>
+
+
 </center>
 
 <script> 
